added code to user classes and updated uml

--- a/TarkovTracker/TarkovTracker/appsettings.Development.json
+++ b/TarkovTracker/TarkovTracker/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "1": "Data Source=mssqlstud.fhict.local;Database=dbi550462;TrustServerCertificate=True;Integrated Security=false;User ID=dbi550462;Password=Tarkov123!"
   }
 }
