--- a/TarkovTracker/TTBusinesLogic/TTBusinesLogic.csproj
+++ b/TarkovTracker/TTBusinesLogic/TTBusinesLogic.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="a\" />
   </ItemGroup>
 
 </Project>
