--- a/TarkovTracker/tarkovTest/tarkovTest.csproj
+++ b/TarkovTracker/tarkovTest/tarkovTest.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="MSTest" Version="3.6.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
