--- a/TarkovTracker/TarkovTracker/TarkovTracker.csproj
+++ b/TarkovTracker/TarkovTracker/TarkovTracker.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\TTBusinesLogic\TTBusinesLogic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="models\" />
+  </ItemGroup>
+
 </Project>
