--- a/TarkovTracker/TTBusinesLogic/TTBusinesLogic.csproj
+++ b/TarkovTracker/TTBusinesLogic/TTBusinesLogic.csproj
@@ -7,13 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="a\" />
+    <Folder Include="services\" />
   </ItemGroup>
 
 </Project>
