--- a/TarkovTracker/TTBusinesLogic/TarkovTrackerBLL - Backup (1).csproj
+++ b/TarkovTracker/TTBusinesLogic/TarkovTrackerBLL - Backup (1).csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,13 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TTBusinesLogic\TarkovTrackerBLL.csproj" />
-    <ProjectReference Include="..\TTBusinesLogic\TTBusinesLogic.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="models\" />
-    <Folder Include="wwwroot\Json\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
